tests/negative/incompatible_declaration.c
int value;
char value;
int main(void) { return 0; }
